nexus-rapture and nexus-coreui-plugin fixes applied